# OpenGL-Demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/: CMakeLists.txt
3rd/glad/include/glad/: gl.h
3rd/glad/src/: gl.c
resources/scenes/: demo.json
resources/scripts/: BounceAnimation.lua  CameraMove.lua
resources/shaders/: lighting_deferred_fragment.glsl  lighting_deferred_vertex.glsl  mesh_deferred_fragment.glsl  mesh_deferred_vertex.glsl  mesh_pointlight_shadow_fragment.glsl  mesh_pointlight_shadow_vertex.glsl  mesh_shadow_fragment.glsl  mesh_shadow_vertex.glsl  overlay_fragment.glsl  overlay_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp  Application.h  Window.cpp  Window.h
src/behaviours/: CameraMoveBehaviour.cpp  CameraMoveBehaviour.h  OscillationAnimationBehaviour.cpp  OscillationAnimationBehaviour.h
src/core/: Container.h  FileSystem.cpp  FileSystem.h  Vertex.h
src/data/: AssetDatabase.cpp  AssetDatabase.h  Box.cpp  Box.h  Container.h  DirectionalLight.h  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshInstance.h  Particle.h  PointLight.h  Prefab.cpp  Prefab.h  Ray.h  Skybox.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h
src/input/: InputHandler.cpp  InputHandler.h
src/loaders/: GltfLoader.cpp  GltfLoader.h  SceneLoader.cpp  SceneLoader.h  ScriptLoader.cpp  ScriptLoader.h  TextureLoader.cpp  TextureLoader.h
src/physics/: Collision.cpp  Collision.h
src/rendering/: Buffer.h  Camera.cpp  Camera.h  DrawCommand.h  Framebuffer.cpp  Framebuffer.h  LightTransform.cpp  LightTransform.h  MeshBuffer.cpp  MeshBuffer.h  RenderPass.h  Renderer.cpp  Renderer.h  SceneData.h  Shader.cpp  Shader.h  VertexLayout.cpp  VertexLayout.h
src/rendering/renderpasses/: DirectionalShadowRenderPass.cpp  DirectionalShadowRenderPass.h  GBufferRenderPass.cpp  GBufferRenderPass.h  LightingRenderPass.cpp  LightingRenderPass.h  PointLightShadowRenderPass.cpp  PointLightShadowRenderPass.h  SkyboxRenderPass.cpp  SkyboxRenderPass.h
src/scene/: Scene.cpp  Scene.h  Scene3DModel.cpp  Scene3DModel.h  Scene3DTransformObject.cpp  Scene3DTransformObject.h  SceneDirectionalLightObject.cpp  SceneDirectionalLightObject.h  SceneObject.cpp  SceneObject.h  ScenePointLightObject.cpp  ScenePointLightObject.h  SceneSelection.cpp  SceneSelection.h  SceneTree.h
src/scripting/: LuaScript.cpp  LuaScript.h  LuaState.cpp  LuaState.h
src/world/: Behaviour.h  Entity.h  LuaBehaviour.cpp  LuaBehaviour.h  RenderSystem.h  SpatialTree.cpp  SpatialTree.h  World.h
src/world/components/: BehaviourComponent.h  CameraComponent.cpp  CameraComponent.h  DirectionalLightComponent.h  MeshRenderingComponent.h  ParticleEmitterComponent.h  PointLightComponent.h  TransformComponent.h
src/world/systems/: BehaviourSystem.cpp  BehaviourSystem.h  LightingSystem.cpp  LightingSystem.h  ParticleSystem.cpp  ParticleSystem.h  RenderSystem.cpp  RenderSystem.h
